apps/newsreaders/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsreaders-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsreaders-frontend
  template:
    metadata:
      labels:
        app: newsreaders-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: pi5-1
      imagePullSecrets:
        - name: container-registry-credentials # Secret containing the GitLab registry credentials
      containers:
        - name: newsreaders-frontend
          image: registry.gitlab.com/lucascajal1/k8s/newsreaders-frontend:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "15m"
              memory: "35Mi"
            limits:
              cpu: "50m"
              memory: "100Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsreaders-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsreaders-backend
  template:
    metadata:
      labels:
        app: newsreaders-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: pi5-1
      imagePullSecrets:
        - name: container-registry-credentials # Secret containing the GitLab registry credentials
      containers:
        - name: newsreaders-backend
          image: registry.gitlab.com/lucascajal1/k8s/newsreaders-backend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "15m"
              memory: "140Mi"
            limits:
              cpu: "80m"
              memory: "200Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsreaders-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsreaders-redis
  template:
    metadata:
      labels:
        app: newsreaders-redis
    spec:
      containers:
        - name: newsreaders-redis
          image: redis:7.2-alpine
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "40m"
              memory: "40Mi"
