apps/newsreaders/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsreaders-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: newsreader.lucascajal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: newsreaders-frontend-service
            port:
              number: 5000
